--- a/Backend/productease-backend/pom.xml
+++ b/Backend/productease-backend/pom.xml
@@ -16,6 +16,7 @@
     <version>0.0.1-SNAPSHOT</version>
     <name>productease-backend</name>
     <description>ProductEase Spring Boot Backend</description>
+     <packaging>war</packaging>
 
     <properties>
         <java.version>21</java.version>
@@ -58,6 +59,7 @@
     </dependencies>
 
     <build>
+		 <finalName>productease-backend</finalName>
         <plugins>
             <plugin>
                 <groupId>org.springframework.boot</groupId>
